compiler/e2e/test/snapshot/semantic_element/wf_check/forall_lifetimes_as_an_operand_in_outlives/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/forall_lifetimes_as_an_operand_in_outlives/main.pnx:27:29
   │
12 │         'b: 'a
   │         ------ the required predicate was declared here
   ·
27 │ public type Second['a, T] = WithRequirement[&'a mut T]:
   │                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ the predicate `'a: 'static` is not satisfied

error: Compilation aborted due to 1 error(s)



stdout:
